# Cosmo-Bot

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
cogs/: Botverwaltung.py  Serversettings.py  allgemein.py  cog_listner.py  economy.py  errors.py  fun.py  info.py  moderation.py  tools.py
utils/: database.py  dropdownmenu.py  embeds.py  other_data.py
